data/derived/comb/progs/unify/prog5964.ml.out
Characters 61-62:
  if checkSame (listReverse (explode (w)), w) then true else false 
                                           ^
Error: This expression has type string but an expression was expected of type
         char list
